--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,7 @@
     --pri-color: #fff;
     --sec-color: #3f3d56;
     --width: min(88vw, 1200px);
+    --MW: min(88vw, 500px);
     --set-shadow: 4px 4px 5px #3332;
     --set-shadow2: 4px 4px 5px #ffffff15;
     --gap: 50px;
@@ -297,6 +298,17 @@ article.docAppoint > section {
     background-color: transparent;
     color: var(--sec-color);
     border: 2px solid var(--sec-color);
+}
+
+.light {
+    background-color: var(--pri-color);
+    color: var(--sec-color);
+}
+
+.light:hover, .active {
+    background-color: transparent;
+    color: var(--pri-color);
+    border: 2px solid var(--pri-color);
 }
 
 /* animations */
